2008-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* Makefile.in:
	use $(srcdir) in every rule
	(more portable than relying on VPATH and $<)

	* configure:
	options get quoted in the generated file config.status 
	(fixes bug #23781)

2008-08-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c:
	restore background-color after playing a demo

	* avatar.c (avt_set_background_color):
	update the whole screen again after drawing the balloon

2008-08-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (execute_process):
	change settings of terminal before forking

	* avatarsay.c (process_subprogram):
	avoid checking the encoding (fixes bug with short prompts)

2008-08-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (windowmode_size):
	new variable
	save size of window for switching back from fullscreen mode

2008-08-09  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h (avt_toggle_fullscreen):
	newly exported

	* avatarsay.c (menu):
	toggle fullscreen in menu

	* avatarsay.c (initialize_start_dir):
	new function
	(main, quit, run_info): adapted
	work even harder to find the documentation when it's not installed

2008-08-08  Andreas K. Foerster  <info@akfoerster.de>

	* bdfread.pas, ucsfont4x6.c, ucsfont7x14.c, ucsfont9x18.c,
	avatar.c (avt_drawchar):
	optimized font-lookup algorithm

2008-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* avtfilechooser.c (get_file):
	recognize symbolic links pointig to a directory as directory

	* avatarsay.c (menu, run_shell):
	hide balloon while starting up the shell

	* avtfilechooser.c (get_file):
	no direct index keys anymore

	* avatar.c (avt_menu):
	new function - replaces avt_get_menu
	supports continued menus
        avtfilechooser.c: adapted

2008-08-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (update_menu_bar):
	new function

	* avatar.c (avt_get_menu):
	support for arrow keys - use right or enter to select

	* avatar.c (avt_get_menu):
	use a menu-bar
