@@ -1,5 +1,8 @@
 2008-08-13  Andreas K. Foerster  <info@akfoerster.de>
 
+	* avatarsay.c:
+	set the default background color right at the start
+
 	* Makefile.in:
 	use $(srcdir) in every rule
 	(more portable than relying on VPATH and $<)
